<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="Adybelli store"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="+99361234567"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="22dp"
        android:paddingEnd="16dp"
        android:paddingBottom="22dp">


        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accepted"
                android:textColor="@color/hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/count_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/pending"
                android:textColor="@color/hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/count_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/canceled"
                android:textColor="@color/hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/count_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/update"
                android:visibility="gone"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:drawableStart="@drawable/store_ic_baseline_rotate_left_24"
                android:gravity="center_vertical"
                android:drawableTint="@color/main_color"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>