<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/store_ic_close_circle"
        app:tint="@color/black" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <com.android.adybelliservice.StoreApplication.View.AppTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/logout"
                app:tvFont="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        <com.android.adybelliservice.StoreApplication.View.AppTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/logout_message"
            app:tvFont="regular"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel"
                android:layout_weight="1"
                android:padding="14dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/always_black"
                android:stateListAnimator="@null"
                app:rippleColor="@color/passive_color"
                android:textAllCaps="false"
                android:layout_marginEnd="12dp"
                android:textSize="12sp"
                app:backgroundTint="@color/border_color"
                style="@style/Widget.MaterialComponents.Button"
                />
          <RelativeLayout
              android:layout_marginStart="12dp"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content">

                 <Button
                     android:id="@+id/ok"
                     android:padding="14dp"
                     style="@style/Widget.MaterialComponents.Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/ok"
                     android:textAllCaps="false"
                     android:textColor="@color/always_white"
                     android:stateListAnimator="@null"
                     android:textSize="12sp"
                     app:backgroundTint="@color/dangerous"
                     app:rippleColor="@color/red_transparent" />

              <com.google.android.material.progressindicator.CircularProgressIndicator
                  android:id="@+id/loadingButton"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:indeterminate="true"
                  android:layout_centerInParent="true"
                  app:indicatorSize="25dp"
                  app:indicatorColor="@color/always_white"
                  app:trackThickness="4dp" />
          </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>