<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/root"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.android.adybelliservice.StoreApplication.View.AppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            app:tvFont="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            app:hintTextColor="@color/hint"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/background"
            app:boxStrokeWidthFocused="0dp"
            app:boxCollapsedPaddingTop="6dp"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/background"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:textSize="12sp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:hintTextColor="@color/hint"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/background"
            app:boxStrokeWidthFocused="0dp"
            app:boxCollapsedPaddingTop="6dp"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/background"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textSize="12sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ok"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/always_white"
                android:textSize="14sp"
                app:backgroundTint="@color/main_color"
                app:rippleColor="@color/always_white" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_centerInParent="true"
                app:indicatorSize="25dp"
                android:visibility="gone"
                app:indicatorColor="@color/black"
                app:trackThickness="4dp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>