<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.NavbarFragment.DefaultFilter">

    <RelativeLayout
        android:id="@+id/topBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/store_ic_baseline_arrow_back_ios_new_24"
            android:drawablePadding="8dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:text="Title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="12dp" />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        android:layout_below="@id/topBar"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="12dp"
            android:layout_weight="1"
            android:inputType="text"
            android:background="@drawable/store_edit_text_bg"
            android:hint="@string/search_title"
            android:textSize="12sp"
            android:textColor="@color/black"
            />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/searchBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/main_color"
            android:src="@drawable/store_ic_baseline_search_24"
            app:tint="@color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/rec"
        android:layout_above="@id/acceptBtn"
        android:layout_below="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/main_color"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@color/always_white"
        android:textSize="14sp" />

</RelativeLayout>